--- a/src/static/decorator.html
+++ b/src/static/decorator.html
@@ -6,18 +6,34 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Decorator Test</title>
 </head>
+<pre>
+  // 浏览器还不支持ES7 Decorators
+  // Date: 2019/07/11
+  function testable(props) {
+    props.isLoading = true;
+  }
+
+  @testable
+  class MyTestableClass {}
+
+  console.log(MyTestableClass.isLoading)
+</pre>
 <body>
   <script>
     // 浏览器还不支持ES7 Decorators
     // Date: 2019/07/11
-    function testable(props) {
-      props.isLoading = true;
+    try {
+      function testable(props) {
+        props.isLoading = true;
+      }
+  
+      @testable
+      class MyTestableClass {}
+  
+      console.log(MyTestableClass.isLoading)
+    } catch (err) {
+      console.error(err)
     }
-
-    @testable
-    class MyTestableClass {}
-
-    console.log(MyTestableClass.isLoading)  
   </script>
 </body>
 </html>
